--- a/res/layout/layout_simulador_sensor.xml
+++ b/res/layout/layout_simulador_sensor.xml
@@ -23,6 +23,12 @@
             android:text="Esperando..." />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Canal" />
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,36 +39,31 @@
             android:id="@+id/spinnerCanales"
             android:layout_width="152dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:layout_weight="0.51" />
-
-        <Button
-            android:id="@+id/buttonAgregarCanal"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="+" />
-
-        <Button
-            android:id="@+id/buttonRemoverCanal"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="-" />
 
     </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Señal" />
 
         <Spinner
             android:id="@+id/spinnerSenales"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="" />
 
     </LinearLayout>
 
@@ -91,20 +92,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
-		
-		<TextView
-        	android:id="@+id/textViewFs"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_gravity="center"
-        	android:text="Frecuencia de Muestreo (Hz)" />
-        
-        <SeekBar
-            android:id="@+id/seekBarFs"
-            android:layout_width="275dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:max="900" />
 
     </LinearLayout>
 
